# nbdev-template-cc

./: .env.example  .jupytext.toml  Claude.md  Makefile  pyproject.toml  references.bib
.github/workflows/: test.yaml
scripts/: nbdev_sync.sh
