[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "%PROJECT_NAME%"  # Will be replaced during project creation
requires-python = ">=3.10"
dynamic = [
    "keywords",
    "description",
    "version",
    "dependencies",
    "optional-dependencies",
    "readme",
    "license", 
    "authors",
    "classifiers",
    "entry-points",
    "scripts",
    "urls"
]

[project.optional-dependencies]
dev = ["nbdev", "pytest", "ruff","ipykernel", "python-dotenv","pre-commit"]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "settings.ini" }
]


[tool.jupytext]
formats = "ipynb,py:percent"